feat: update SEND_PERIOD to 2000 for gwf1 and gwf2 deployments; add rate limiting to gateway requests; add gwi ingress configuration; enhance undeploy script